# Sheet2DrumMidi

./: .gitattributes  .gitignore  CODEX_INSTRUCTIONS.md  LICENSE  README.md  example.musicxml  log.txt  pyproject.toml
.github/workflows/: ci.yml
doc/src/: .gitignore
docs/architecture/: recognition_pipeline.md
src/drum_score_converter/: __init__.py  _openai_vision_request.py  _openai_vision_response.py  _openai_vision_segments.py  _openai_vision_transport.py  count_in_generator.py  midi_exporter.py  musicxml_exporter.py  openai_vision_recognizer.py  page_renderer.py  pdf_loader.py  recognition_model.py  recognition_pipeline.py  recognition_validator.py  score_builder.py  score_model.py  vision_recognizer.py
src/sheet2drummidi/: __init__.py  __main__.py  cli.py
tests/: test_cli.py  test_count_in_generator.py  test_midi_exporter.py  test_musicxml_exporter.py  test_package.py  test_page_renderer.py  test_pdf_loader.py  test_recognition_model.py  test_recognition_pipeline.py  test_recognition_pipeline_integration.py  test_recognition_validator.py  test_score_builder.py  test_score_model.py  test_vision_recognizer.py
tests/fixtures/: README.md
