[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "drum-score-converter"
version = "0.1.0"
description = "Convert drum score PDFs to MusicXML and MIDI."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "takigawa401" }]
dependencies = [
    "mido>=1.3.3,<2",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pytest>=8.2",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = "mido.*"
ignore_missing_imports = true
